--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,38 @@
-blinker==1.6.3
-certifi==2023.7.22
-charset-normalizer==3.3.1
-click==8.1.7
-colorama==0.4.6
-contourpy==1.1.1
-cycler==0.12.1
-filelock==3.13.0
-Flask==3.0.0
-Flask-Cors==4.0.0
-fonttools==4.43.1
-gunicorn==22.0.0
-idna==3.4
-imageio==2.31.6
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kiwisolver==1.4.5
-lazy_loader==0.3
-MarkupSafe==2.1.3
-mpmath==1.3.0
-networkx==3.2.1
-numpy==1.26.1
-packaging==23.2
-Pillow==10.0.1
-pyparsing==3.1.1
-python-dateutil==2.8.2
-PyWavelets==1.4.1
-requests==2.31.0
-scikit-image==0.20.0
-scipy==1.11.3
-six==1.16.0
-sympy==1.12
-tifffile==2023.9.26
-torch==2.0.1
-torchvision==0.15.2
-typing_extensions==4.8.0
-urllib3==2.0.7
-Werkzeug==3.0.1
+blinker
+certifi
+charset-normalizer
+click
+colorama
+contourpy
+cycler
+filelock
+Flask
+Flask-Cors
+fonttools
+gunicorn
+idna
+imageio
+itsdangerous
+Jinja2
+kiwisolver
+lazy_loader
+MarkupSafe
+mpmath
+networkx
+numpy
+packaging
+Pillow
+pyparsing
+python-dateutil
+PyWavelets
+requests
+scikit-image
+scipy
+six
+sympy
+tifffile
+torch
+torchvision
+typing_extensions
+urllib3
+Werkzeug
